fixed alignment inside carousel

--- a/src/components/hero/Hero.css
+++ b/src/components/hero/Hero.css
@@ -1,22 +1,17 @@
 .movie-carousel-container {
-    width: 100vw;
+    margin: auto;
+    margin-top: 5%;
+    justify-content: center;
+    width: 40%;
     background-color: black;
-}
-.movie-poster {
-    height: 300px;
-    border: 1px solid gold;
-    border-radius: 10px;
-    overflow: hidden;
-}
-.movie-poster > img {
-    height: 100%;
-    width: 100%;
 }
 .movie-card-container {
-    height: 550px;
-    background-color: black;
+    justify-content: center;
+    align-items: center;
+    background-color: grey;
 }
 .movie-card {
+    margin: auto;
     background-repeat: no-repeat;
     width: 100%;
     height: 100%;
@@ -24,14 +19,37 @@
     background-image: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,1));
 }
 .movie-detail {
-    position: absolute;
-    top: 200px;
     display: flex;
+    align-items: center;
     justify-content: center;
     width: 100%;
 }
+
+.movie-poster-container {
+    justify-content: center;
+    align-items: center;
+    width: 40%;
+}
+.movie-poster {
+    height: 300px;
+    border: 1px solid gold;
+    border-radius: 10px;
+    overflow: hidden;
+    display: inline-block;
+}
+.movie-poster > img {
+    height: 100%;
+    width: 100%;
+}
+
+.movie-title-container {
+    justify-content: center;
+    align-items: center;
+    width: 40%;
+}
+
 .movie-title {
     color: white;
-    display: flex;
+    justify-content: center;
     align-items: center;
 }
